# HomeWorks_6_Django

./: db.sqlite3  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py
config/: settings.py
fixtures/: data_json_catalog.json
home_work_1/: index.html  index_edited.html  main.py
