[tool.poetry]
name = "homework-6-django"
version = "0.1.0"
description = ""
authors = ["Valera K <vk1337atliberty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
pillow = "^10.3.0"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
ipython = "^8.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
